<resources>
    <string name="app_name">PracticalAssignment</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="pick_me">Pick me</string>
    <string name="level_1_title_color">Level 1 Title Color</string>
    <string name="test_your_eye">Test your eye!</string>
    <string name="player_having_5_seconds_to_play_on_each_level_choose_the_highlighted_block_top_25_player_s_scores_will_be_record_in_score_table">Player having 5 seconds to play on each level, choose the highlighted block, top 25 player\'s scores will be record in score table</string>
    <string name="how_to_play">How to Play</string>
    <string name="start_game">Start Game ~</string>
    <string name="score_table">Score Table</string>
    <string name="level_1">Level 1</string>
    <string name="time_5">Time: 5</string>
    <string name="gameover">GameOver !!!</string>
    <string name="back_to_menu">Back To Menu</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_5">Level 5</string>
    <string name="level_4">Level 4</string>
    <string name="level_6">Level 3</string>
    <string name="submit">Submit</string>
    <string name="congratulation_for_completing">Congratulation For Completing</string>
    <string name="name">Name :</string>
</resources>