<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00B0FF"
    tools:context=".Complete">

    <EditText
        android:id="@+id/Player"
        android:layout_width="321dp"
        android:layout_height="86dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="252dp"
        android:background="#08BDCD"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView97"
        android:layout_width="265dp"
        android:layout_height="134dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="92dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/congratulation_for_completing"
        android:textColor="#1B5E20"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="372dp"
        android:background="#7CE106"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>